--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -304,6 +304,7 @@ h1 {
 /* HEADER */
 header {
     position: relative;
+    overflow: hidden;
     /* width: 100%;
     height: 60px;
     top: 0;
